@@ -310,9 +310,10 @@ class ChEMBLTargetActivityProvider(StashableBase):
             ureq = UrlRequestUtil()
             ret, retCode = ureq.get(baseUrl, endPoint, pD, headers=hL, returnContentType="JSON")
             logger.info("retCode %r ret %r", retCode, ret)
-            tS = ret["chembl_db_version"] if ret and "chembl_db_version" in ret else None
-            version = tS.split("_")[1] if tS and tS.split("_")[1] else None
-            releaseDateString = ret["chembl_release_date"] if "chembl_release_date" in ret else None
+            if ret:
+                tS = ret["chembl_db_version"] if ret and "chembl_db_version" in ret else None
+                version = tS.split("_")[1] if tS and tS.split("_")[1] else None
+                releaseDateString = ret["chembl_release_date"] if "chembl_release_date" in ret else None
         except Exception as e:
             logger.exception("Failing with %s", str(e))
         return version, releaseDateString
