@@ -47,3 +47,4 @@
   14-Jul-2021  - V0.55 Standardize provider APIs extend functionality of PharosTargetActivityProvider
   28-Jul-2021  - V0.56 Update constructor API for TaxonomyProvider and update dependencies
    5-Sep-2021  - V0.57 Update SAbDab data importer, fix initialization in ChEMBLTargetActivityProvider.getStatusDetails()
+  14-Sep-2021  - V0.58 Add cache test for TaxonomyProvider() add bypass for ChEMBL fetchStatus() test
